--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,52 @@
+defaultTasks 'clean', 'build'
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 
 repositories {
 	mavenLocal()
+    mavenCentral()
 }
 
 dependencies {
   
-  testCompile 'junit:junit:4.11'
+  testCompile 'junit:junit:4.12'
 
-  testCompile 'org.concordion:concordion:1.4.4'
-  testCompile 'org.concordion:concordion-extensions:1.1.1'
+  testCompile 'org.concordion:concordion:1.4.7'
+  //testCompile 'org.concordion:concordion-extensions:1.1.1'
 
-  testCompile 'org.seleniumhq.selenium.fluent:fluent-selenium:1.14.5'
-  testCompile 'org.seleniumhq.selenium:selenium-java:2.44.0' 
-  testCompile 'org.seleniumhq.selenium:selenium-api:2.44.0'
-  testCompile 'org.seleniumhq.selenium:selenium-ie-driver:2.44.0'
-  testCompile 'org.seleniumhq.selenium:selenium-support:2.44.0'
-  testCompile 'org.seleniumhq.selenium:selenium-remote-driver:2.44.0'  
-  testCompile 'org.seleniumhq.selenium:selenium-firefox-driver:2.44.0'  
-  testCompile 'org.seleniumhq.selenium:selenium-chrome-driver:2.44.0'  
-  testCompile 'org.seleniumhq.selenium:selenium-server:2.33.0'
+  //testCompile 'org.seleniumhq.selenium.fluent:fluent-selenium:1.14.5'
+  testCompile 'org.seleniumhq.selenium:selenium-java:2.45.0' 
+  testCompile 'org.seleniumhq.selenium:selenium-api:2.45.0'
+  //testCompile 'org.seleniumhq.selenium:selenium-ie-driver:2.45.0'
+  //testCompile 'org.seleniumhq.selenium:selenium-support:2.45.0'
+  //testCompile 'org.seleniumhq.selenium:selenium-remote-driver:2.45.0'  
+  testCompile 'org.seleniumhq.selenium:selenium-firefox-driver:2.45.0'  
+  testCompile 'org.seleniumhq.selenium:selenium-chrome-driver:2.45.0'  
+  //testCompile 'org.seleniumhq.selenium:selenium-server:2.45.0'
 
-  testCompile 'org.springframework:spring-jdbc:4.1.4.RELEASE'
+  //testCompile 'org.springframework:spring-jdbc:4.1.4.RELEASE'
   testCompile 'org.springframework:spring-core:4.1.4.RELEASE'
   testCompile 'org.springframework:spring-tx:4.1.4.RELEASE'
   testCompile 'org.springframework:spring-context:4.1.4.RELEASE'
   testCompile 'org.springframework:spring-test:4.1.4.RELEASE'
 
   testCompile 'log4j:log4j:1.2.17'
-  testCompile 'org.hamcrest:hamcrest-all:1.3'
-  testCompile 'org.mockito:mockito-core:1.9.5'
-  testCompile 'joda-time:joda-time:2.3'
+  //testCompile 'org.hamcrest:hamcrest-all:1.3'
+  //testCompile 'org.mockito:mockito-core:1.9.5'
+  //testCompile 'joda-time:joda-time:2.3'
 }
 
-defaultTasks 'build'
+test {
+    systemProperties['concordion.output.dir'] = "${reporting.baseDir}"
+}
+
+sourceSets {
+    test {
+        resources {
+            srcDir 'src/test/java'
+        }
+    }
+}
 
 
