Added Spring profile control to Gradle

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,8 @@ dependencies {
 }
 
 test {
-    systemProperties['concordion.output.dir'] = "${reporting.baseDir}"
+    systemProperty "concordion.output.dir", "${reporting.baseDir}"
+    systemProperty "spring.profiles.active", "chrome"
 }
 
 sourceSets {
