Improved logging when running outside of Concordion

--- a/src/test/java/log4j.properties
+++ b/src/test/java/log4j.properties
@@ -9,3 +9,4 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %t %
 #log4j.appender.stdout.layout.ConversionPattern=%-5p %c{1}:%L - %m%n
 
 #Set log levels
+log4j.logger.org.springframework=ERROR
