--- a/src/test/java/log4j.properties
+++ b/src/test/java/log4j.properties
@@ -10,3 +10,4 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %t %
 
 #Set log levels
 log4j.logger.org.springframework=ERROR
+log4j.logger.com.gargoylesoftware.htmlunit=ERROR
