Added screenshot support

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,3 +1,4 @@
 path.to.phantomjs.driver=/usr/local/drivers/phantomjs/bin/phantomjs
 path.to.chrome.driver=/usr/local/drivers/chromedriver
 path.to.firebug.xpi=/usr/local/drivers/firebug-2.0.8-fx.xpi
+max.screenshot.width=1024
