--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ dependencies {
   testCompile 'junit:junit:4.12'
 
   testCompile 'org.concordion:concordion:1.4.7'
+  testCompile 'org.concordion:concordion-extensions:1.1.1'
 
   testCompile 'org.seleniumhq.selenium:selenium-java:2.45.0' 
   testCompile 'org.seleniumhq.selenium:selenium-api:2.45.0'
